--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="StyleSheet" href="./css/index.css" type="text/css" />
+    <link rel="StyleSheet" href="./_css/index.css" type="text/css" />
     <title>PRUEBA PAGE DEPLOY</title>
   </head>
   <body>
